# wpl

./: .gitattributes  .gitignore  CMakeLists.txt  Journal.md  ProjectStructure.md  README.md  coverage.sh  log.txt
cmake/: ANTLR.cmake  CodeCoverage.cmake  Codegen.cmake  LLVM.cmake  Runtime.cmake  Semantic.cmake  Symbol.cmake  Tabulate.cmake  Utility.cmake
programs/: Lambda1.wpl  Lambda2.wpl  Lambda2a.wpl  Lambda2b.wpl  Lambda3.wpl  dangerLambda.wpl  doubleArg1.wpl  doubleArg2.wpl  doubleArg3.wpl  enum1.wpl  enum2.wpl  enum3.wpl  enumAssign.wpl  enumAssign2.wpl  example.wpl  externLambda.wpl  externProc.wpl  ooof.wpl  test-arrayAssign.wpl  test-runtime.wpl  test-shortcircuit-rt.wpl  test-shortcircuit.wpl  test1-full.wpl  test1.wpl  test10.wpl  test11.wpl  test11err.wpl  test12.wpl  test13.wpl  test14a.wpl  test15.wpl  test16.wpl  test16a.wpl  test16c-1.wpl  test16c-2.wpl  test16c.wpl  test16d.wpl  test16e.wpl  test16f.wpl  test17.wpl  (+28 more)
programs/ALevel/: ANegative1.wpl  APositive1.wpl  APositive2.wpl
programs/BLevel/: BNegative1.wpl  BNegative2.wpl  BPositive1.wpl  BPositive2.wpl
programs/CLevel/: CNegative1.wpl  CNegative2.wpl  CPositive2.wpl
programs/adv/: NestedEnum.wpl  StructTest2.wpl  StructTest3.wpl  StructTest3a.wpl  StructTest3b.wpl  StructTest4.wpl  enumPassingInf.wpl
programs/initial/: A10Test  A11Test  A12Test  A13Test  A14Test  A15Test  A16Test  A17Test  A18Test  A19Test  A1Test.wpl  A20Test  A21Test  A22Test  A2Test.wpl  A3Test.wpl  A4Test.wpl  A5Test.wpl  A6Test.wpl  A7Test.wpl  A8Test  A9Test  B10Test  B11Test  B12Test  B1Test  B2Test  B3Test  B4Test  B5Test  B6Test  B7Ttest  B8Test  B9Test  C10Test  C11Test  C12Test  C13Test  C14Test  C15Test  (+12 more)
programs/multi/: main.wpl  math.wpl
src/: CMakeLists.txt  calculator.cpp  test1.wpl  wplc.cpp
src/codegen/: CMakeLists.txt  CodegenVisitor.cpp
src/lexparse/: CMakeLists.txt  Calculator.g4  WPL.g4
src/runtime/: CMakeLists.txt  calculator_runtime.c  wpl_runtime.h
src/semantic/: CMakeLists.txt  PropertyManager.cpp  SemanticVisitor.cpp
src/semantic/include/: PropertyManager.h  SemanticVisitor.h
src/symbol/: CMakeLists.txt  STManager.cpp  Scope.cpp  Symbol.cpp  Type.cpp
src/symbol/include/: Type.h  (+3 more)
src/utility/: CMakeLists.txt  CalcErrorHandler.cpp
test/: CMakeLists.txt
(+26 files in other folders)
